add base css from bitters

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,28 +1,47 @@
-//COLORS
-$c-base: #4d4d4d;
-$c-white: #ffffff;
-$c-red: #ff0000;
+// Breakpoints
+$medium-screen: 600px;
+$large-screen: 900px;
 
-$c-grey-dark: lighten($c-base, 40%);
+// Typography
+$base-font-family: "openSansRegular", Arial, Helvetivca, San-Serif;
+$heading-font-family: $base-font-family;
 
-$c-body-background: $c-grey-dark;
+// Font Sizes
+$base-font-size: 1em;
+
+// Line height
+$base-line-height: 1.5;
+$heading-line-height: 1.2;
+
+// Other Sizes
+$base-border-radius: 3px;
+$base-spacing: $base-line-height * 1em;
+$small-spacing: $base-spacing / 2;
+$base-z-index: 0;
 
 
-//DIMENSIONS
+// Colors
+$c-blue: #1565c0;
+$c-dark-gray: #333;
+$c-medium-gray: #999;
+$c-light-gray: #ddd;
 
+// Font Colors
+$c-base-font: $c-dark-gray;
+$c-action: $c-blue;
 
-//BREAKPOINTS
+// Border
+$c-base-border: $c-light-gray;
+$base-border: 1px solid $c-base-border;
 
+// Background Colors
+$base-background-color: #fff;
+$secondary-background-color: tint($c-base-border, 75%);
 
-//BORDERS
-$border: 1px solid $c-grey-dark;
-$border2: 2px solid $c-grey-dark;
+// Forms
+$form-box-shadow: inset 0 1px 3px rgba(#000, 0.06);
+$form-box-shadow-focus: $form-box-shadow, 0 0 5px adjust-color($c-action, $lightness: -5%, $alpha: -0.3);
 
-
-//FONTS
-
-$f-base-font-family: 'openSansRegular';
-$f-base-font-family-bold: 'openSansBold';
-$f-base-size: 14px;
-$f-link-color: $c-red;
-$f-link-color-hover: lighten($c-red, 20%);
+// Animations
+$base-duration: 150ms;
+$base-timing: ease;
