--- a/src/scss/elemente/_all.scss
+++ b/src/scss/elemente/_all.scss
@@ -1,6 +1,6 @@
-@import "fonts";
-@import "images";
-@import "lists";
 @import "buttons";
 @import "forms";
+@import "lists";
+@import "media";
 @import "tables";
+@import "typography";
