--- a/src/scss/layout/_all.scss
+++ b/src/scss/layout/_all.scss
@@ -1,5 +1,16 @@
-body {
-    background: $c-body-background;
+html {
+    box-sizing: border-box;
+}
+
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
 }
 
 @import "header";
